--- a/src/index.scss
+++ b/src/index.scss
@@ -14,19 +14,19 @@
   }
 
   h2 {
-    @apply text-4xl font-normal text-white md:text-5xl xl:text-6xl;
-  }
-
-  h3 {
     @apply text-3xl font-normal text-white md:text-4xl xl:text-5xl;
   }
 
-  h4 {
-    @apply text-2xl font-normal text-white md:text-3xl xl:text-4xl;
+  h3 {
+    @apply text-3xl font-normal text-white md:text-4xl;
+  }
+
+  p {
+    @apply text-xl lg:text-2xl text-white;
   }
 
   .navbar {
-    @apply flex flex-col py-10 bg-black;
+    @apply flex flex-col py-10;
 
     &--title {
       @apply self-center text-2xl font-normal tracking-wide text-white md:text-3xl;
