refactor: refactors hero page

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@
   }
 
   h1 {
-    @apply text-7xl leading-tight text-white font-normal lg:leading-tight xl:leading-tight lg:text-6xl xl:text-8xl;
+    @apply text-7xl leading-tight text-white font-light xl:leading-tight xl:text-8xl;
   }
 
   h2 {
