--- a/src/index.scss
+++ b/src/index.scss
@@ -14,15 +14,15 @@
   }
 
   h2 {
-    @apply text-2xl font-normal leading-tight md:leading-tight xl:leading-tight text-white md:text-4xl xl:text-3xl;
+    @apply text-5xl leading-tight text-white font-light xl:leading-tight xl:text-6xl;
   }
 
   h3 {
-    @apply text-3xl font-normal text-white md:text-4xl;
+    @apply text-3xl leading-tight text-white font-light xl:leading-tight xl:text-4xl;
   }
 
   p {
-    @apply text-xl lg:text-2xl text-white lg:leading-relaxed;
+    @apply text-xl lg:text-2xl font-light lg:leading-relaxed text-slate-400;
   }
 
   .navbar {
