--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,10 @@
     @apply text-3xl leading-tight text-white font-light xl:leading-tight xl:text-4xl;
   }
 
+  h6 {
+    @apply text-xl lg:text-2xl font-light lg:leading-relaxed;
+  }
+
   p {
     @apply text-xl lg:text-2xl font-light lg:leading-relaxed text-slate-400;
   }
