--- a/src/index.scss
+++ b/src/index.scss
@@ -26,7 +26,7 @@
   }
 
   p {
-    @apply text-xl lg:text-2xl font-light lg:leading-relaxed text-slate-400 selection:bg-white selection:text-black;
+    @apply text-xl lg:text-2xl leading-relaxed font-light lg:leading-relaxed text-slate-400 selection:bg-white selection:text-black;
   }
 
   .navbar {
