--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,10 @@
       @apply self-center text-xl md:text-2xl font-normal z-10 tracking-wide text-white;
     }
   }
+
+  a {
+    @apply text-4xl md:text-5xl leading-tight text-white font-light xl:leading-tight xl:text-6xl selection:bg-white selection:text-black;
+  }
 }
 
 .socialIcons {
